<resources>
    <string name="app_name">chatter</string>
    <string name="count_initial_value">0</string>
    <string name="button_label">Send</string>
    <string name="toast_message">Hurra!</string>
    <string name="input_placeholder">Write a message</string>

    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Click_to_Login">Click to Login</string>
    <string name="Click_to_Register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
