<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login">

    <TextView
        android:text="@string/Login"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/Login"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/registernow"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/Click_to_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--
    <TextView
        android:id="@+id/forgetpass"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    -->

</LinearLayout>